<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_round_home_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/item_list"
            android:icon="@drawable/ic_baseline_view_module_24"
            android:title="Item List" />


        <item
            android:id="@+id/nav_order_history"
            android:icon="@drawable/ic_baseline_reorder_24"
            android:title="@string/menu_order_history" />

        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/menu_cart" />

    </group>

    <item android:title="Settings">
        <menu>

            <item
                android:id="@+id/nav_user_profile"
                android:icon="@drawable/ic_round_person_24"
                android:title="@string/menu_user_profile" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_baseline_exit_to_app_24"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>